# ttg-consulting-portal

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: config.py  dependencies.py  main.py
backend/app/catalog/: seeds.py
backend/app/middleware/: logging.py
backend/app/models/: enums.py  portal.py  resource.py  schemas.py
backend/app/routers/: dev_authz.py  dev_storage.py  health.py  playback.py  portal.py  resources.py  storage.py
backend/app/scripts/: sync_mux.py
backend/app/services/: content_repository.py  edxp_authz.py  mux_client.py  mux_playback_token.py  mux_sync.py  portal_previews.py  supabase.py
backend/tests/: conftest.py  test_content_repository.py  test_edxp_authz.py  test_health.py  test_mux_client.py  test_mux_sync.py  test_playback.py  test_portal_previews.py  test_resources.py
docs/: README.md
docs/api/: overview.md
docs/api/endpoints/: .gitkeep
docs/architecture/: overview.md
docs/architecture/decisions/: .gitkeep
docs/data/: models.md
docs/deployment/: environments.md
docs/getting-started/: contributing.md  development.md  setup.md
docs/prd/: overview.md
docs/prd/features/: .gitkeep
docs/runbooks/: incidents.md
docs/testing/: strategy.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/src/auth/: auth-context.tsx  clerk-auth-bridge.tsx  env.ts  (+2 more)
(+54 files in other folders)
