[project]
name = "ttg-portal-backend"
version = "0.1.0"
description = "TTG Consulting Portal — FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.114.2",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.0.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "pyright>=1.1.370",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"
reportMissingImports = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
